bug fix project paragrhap align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1279,3 +1279,8 @@ section,
   width: 416px; 
   height: 260px;
 }
+
+.project-parghap{
+    text-align: justify;
+}
+
